Change db username for production

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,5 @@ test:
 production:
   <<: *default
   database: DropBox_production
-  username: DropBox
+  username: project_name
   password: <%= ENV['DROPBOX_DATABASE_PASSWORD'] %>
